<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtAge3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/textEdad"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLastName2"
            android:inputType="none" />

        <Spinner
            android:id="@+id/spinnerGender2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:entries="@array/genders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtAge3" />
        <RadioGroup
            android:id="@+id/rdBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/spinnerGender2">

            <RadioButton
                android:id="@+id/Delgado2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Thin"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/Medio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Middle"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/Grande2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Big"
                app:layout_constraintStart_toStartOf="parent" />
        </RadioGroup>


        <CheckBox
            android:id="@+id/ckMuscle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="45dp"
            android:text="@string/ckMuscle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rdBody2" />

        <CheckBox
            android:id="@+id/ckResistence2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ckResistende"
            android:layout_marginStart="10dp"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toTopOf="@id/rdBody2"
            app:layout_constraintStart_toEndOf="@id/ckMuscle2" />

        <CheckBox
            android:id="@+id/ckTone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ckTone"
            android:layout_marginStart="10dp"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toTopOf="@id/rdBody2"
            app:layout_constraintStart_toEndOf="@id/ckResistence2" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchPay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="10dp"
            android:text="@string/switchPay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/rdBody2"/>

        <Button
            android:id="@+id/btnOk2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/btnOk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switchPay2"/>

        <EditText
            android:id="@+id/editName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/textName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/editLastName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/textLastname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>